# smith-net

./: .gitignore  AGENT_INITIALIZATION_README.md  README.md  SUPABASE_SETUP.md  SUPABASE_TABLES.sql  SYSTEM_LAW_README.md  TEST_CASE_PLAN_VALIDATION.md  gosv1.txt  gosv2.txt  ios  nixpacks.toml  supabase-cleanup.sql  ui.xml  uiA_ch.xml  uiA_msg.xml  uiB.xml  uiB2.xml  uiB_ch.xml  uiB_home.xml  uiB_inv.xml  uiB_join.xml  uiB_ref.xml  ui_auth.xml  ui_ch.xml  ui_chat.xml  ui_create.xml  ui_del.xml  ui_del2.xml  ui_new.xml  ui_send.xml  ui_sync.xml  ui_test.xml
.github/: copilot-instructions.md
.github/workflows/: android-build.yml
THE GOS INSRUCTIOS/: GOS-GUILDofSMITH Launch Template.V2.txt  GOS-GUILDofSMITH Launch Template.txt  GUILD OF SMITHS INVOICE (ENTERPRISE.txt  GUILD OF SMITHS INVOICE – ADVANCED solo.txt  Guild of Smiths  TXTDEBUG.txt
android/: .github-workflows-hint.yml  .gitignore  APK_DEPLOYMENT.md  README.md  build-apk.bat  build-apk.sh  gradle.properties  gradlew  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
backend/: env.example.txt  package-lock.json  package.json  railway.json
backend/audit/: audit-2025-12-24.jsonl  audit-2025-12-25.jsonl  audit-2025-12-26.jsonl  audit-2026-01-01.jsonl
backend/src/: adminRoutes.ts  api.ts  archiveService.ts  auditLog.ts  auth.ts  authRoutes.ts  autoPlanCreator.ts  channelRegistry.ts  gatewayManager.ts  llmInterface.ts  mediaHandler.ts  messageStore.ts  outputGenerator.ts  planAuthority.ts  planSynthesis.ts  presenceManager.ts  reportAssembler.ts  reportOutput.ts  reportRenderer.ts  server.ts  supabase.ts  types.ts  wsHandler.ts
backend/src/resolver/: claudeResearch.ts  playwrightSearch.ts  playwrightSearchBrave.ts
backend/uploads/files/: 127782c3-b93b-4e2d-bf36-5845fff13410.m4a  55dc836c-b103-48bd-93e9-b556b3147723.m4a  8ec9eeeb-282e-40c7-b278-fe4478811844.m4a  (+1 more)
desktop/portal/: index.html  package-lock.json  package.json  test-video-upload.js
desktop/portal/src/: App.tsx  (+12 more)
releases/: README.md  update-apk.sh
supabase-migrations/: 002_add_media_support.sql  003_add_plan_management.sql  004_keyword_observations.sql
supabase/migrations/: 000_profiles_only.sql  001_initial_schema.sql
(+133 files in other folders)
